# GBM

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PROJECT_HANDOFF.md  README.md  launcher_menu.bat  pyproject.toml
.github/workflows/: local-verification.yml
configs/extraction/: lexicon_gbm_v1.json
configs/training/: gbmbert_evidence_pubmedbert.json  gbmbert_evidence_smoke_pubmedbert.json  gbmbert_ner_pubmedbert.json  gbmbert_ner_smoke_pubmedbert.json  gbmbert_relation_biobert.json  gold_pack_promotion_thresholds.json
data/examples/: clinicaltrials_gbm_sample.jsonl  entity_synonyms.json  graph_records_sample.jsonl  trial_graph_records_sample.jsonl
data/processed/: evidence_smoke_curated_predictions.jsonl
data/query_packs/: pubmed_gbm_v1.json  pubmed_gbm_v2.json
data/raw/: clinicaltrials_gbm_smoke_2026-06-23.jsonl  ncbi_env_smoke_2026-06-23.jsonl  pubmed_gbm_v1_small_2026-06-23.jsonl  pubmed_gbm_v2_small_2026-06-23.jsonl
data/review/: active_learning_batch_ALBATCH-001.csv  active_learning_batch_reviewed_queue.jsonl  active_learning_candidates.csv  active_learning_candidates.jsonl  evidence_smoke_prediction_review_queue.csv  evidence_smoke_prediction_review_queue.jsonl  evidence_smoke_prediction_reviewed_queue.csv  evidence_smoke_prediction_reviewed_queue.jsonl  ncbi_env_smoke_review_queue.csv  ncbi_env_smoke_review_queue.jsonl  ncbi_env_smoke_reviewed_queue.csv  ncbi_env_smoke_reviewed_queue.jsonl  sample_review_queue.csv  sample_review_queue.jsonl
data/training/: relation_negatives.jsonl
docs/: ANNOTATION_GUIDELINES.md  ARTIFACT_POLICY.md  LAUNCHER_MENU.md  PROJECT_SCOPE.json  RESEARCH_SCOPE_V2.md
models/: checkpoint_registry.json
reports/: artifact_detail.json  artifact_detail.md  artifact_index.json  artifact_index.md  graph_quality_sample.json  graph_quality_sample.md  preflight.json  preflight.md  smoke_baseline.json  smoke_baseline.md
reports/corpus/: clinicaltrials_gbm_smoke_manifest.json  clinicaltrials_gbm_smoke_manifest.md  ncbi_env_smoke_manifest.json  ncbi_env_smoke_manifest.md  pubmed_small_snapshot_2026-06-23.md
reports/graph/: clinicaltrials_gbm_smoke_load_report.json  clinicaltrials_gbm_smoke_load_report.md  clinicaltrials_gbm_smoke_provenance_audit.json  clinicaltrials_gbm_smoke_provenance_audit.md  clinicaltrials_gbm_smoke_quality.json  clinicaltrials_gbm_smoke_quality.md  entity_normalization.json  entity_normalization.md  ncbi_env_smoke_load_report.json  ncbi_env_smoke_load_report.md  ncbi_env_smoke_provenance_audit.json  ncbi_env_smoke_provenance_audit.md  ncbi_env_smoke_unified_quality.json  ncbi_env_smoke_unified_quality.md  qualifier_enrichment.json  qualifier_enrichment.md  relation_extraction_audit.json  relation_extraction_audit.md  sample_graph_evidence_overlay.json  sample_graph_evidence_overlay.md  sample_graph_evidence_overlay_diff.json  sample_graph_evidence_overlay_diff.md  sample_graph_overlay_load_guard.json  sample_graph_overlay_load_guard.md
reports/platform_regression/: artifact_policy.json  artifact_policy.md  ci_report_summary.md  ci_summary_contract.json  ci_summary_contract.md  launcher_menu_check.json  launcher_menu_check.md  local_verification.json  local_verification.md  platform_regression.json  platform_regression.md  scope_drift.json  scope_drift.md
reports/review/: active_learning_batch_roundtrip_export.json  active_learning_batch_roundtrip_export.md  active_learning_batch_roundtrip_import.json  active_learning_batch_roundtrip_import.md  active_learning_candidates.json  active_learning_candidates.md  adjudication_report.json  adjudication_report.md  curated_evidence_search.json  curated_evidence_search.md  curation_handoff_validation.json  curation_handoff_validation.md  curation_run_browser.json  curation_run_browser.md  curation_run_registry.json  curation_run_registry.md  curation_run_registry_report.json  evidence_smoke_curated_evidence_audit.json  evidence_smoke_curated_evidence_audit.md  evidence_smoke_curated_evidence_export.json  evidence_smoke_curated_evidence_export.md  evidence_smoke_prediction_review_summary.json  evidence_smoke_prediction_review_summary.md  ncbi_env_smoke_curation_diff.json  ncbi_env_smoke_curation_diff.md  ncbi_env_smoke_review_summary.json  ncbi_env_smoke_review_summary.md  ncbi_env_smoke_reviewed_summary.json  ncbi_env_smoke_reviewed_summary.md  sample_graph_curated_evidence_audit.json  sample_graph_curated_evidence_audit.md  sample_graph_curated_evidence_export.json  sample_graph_curated_evidence_export.md
reports/training/: curated_fixture_import.json  curated_fixture_import.md  curated_provenance_diff.json  curated_provenance_diff.md  curated_round_rebuild.json  curated_round_rebuild.md  dashboard_training_manifest.json  gold_seed_manifest.md  governance_detail_contract.json  governance_detail_contract.md  governance_detail_links.json  governance_detail_links.md  model_registry_audit.json  model_registry_remediation_plan.json  model_registry_remediation_plan.md  ncbi_env_smoke_dataset_card.md  (+34 more)
tests/: test_annotation_datasets.py  test_annotation_readiness.py  test_artifact_policy.py  test_artifacts.py  test_clinicaltrials_ingest.py  test_corpus_manifest.py  test_curated_round_rebuild.py  test_curation.py  test_dashboard.py  test_dashboard_shell.py  test_entity_extraction.py  test_evidence_classification.py  test_extraction_quality.py  test_graph_provenance.py  test_graph_quality_report.py  test_knowledge_graph_build_records.py  test_knowledge_graph_explorer.py  test_knowledge_graph_inspect.py  test_knowledge_graph_loader.py  test_knowledge_graph_queries.py  test_knowledge_graph_schema.py  test_launcher_menu.py  test_literature_pipeline.py  test_normalize.py  test_paths.py  test_prediction_curation.py  test_preflight.py  test_project_scope.py  test_promotion_and_scope.py  test_pubmed_query_packs.py  test_relation_extraction.py  test_review_batch_prep.py  test_review_queue.py  test_schema.py  test_smoke_baseline.py  test_training_data_cleanup.py  test_training_pr101_110.py  test_training_pr130_134.py  test_training_pr153_156.py  test_training_pr157.py  (+6 more)
(+342 files in other folders)
